--- a/src/style/grid.css
+++ b/src/style/grid.css
@@ -13,6 +13,14 @@
     margin-right: 2%;
 }
 
+.container-column-end{
+    display: flex;
+    justify-content: space-between !important;
+    width: 1100px;
+    height: max-content;
+    align-items: center;
+}
+
 .column{
     flex: 1;
     flex-direction: column;
