--- a/src/style/style.css
+++ b/src/style/style.css
@@ -12,7 +12,6 @@
     color: white;
     border: none;
     width: max-content;
-    margin-top: 5%;
     padding-top: 2%;
     padding-bottom: 2%;
     padding-left: 4%;
@@ -60,4 +59,9 @@ ul li:last-child{
     border: none;
     border-radius: 10px;
     padding: 3%;
+}
+
+.TableFullWidth{
+    width: 100%;
+    
 }
